# unlearn-relearn-reversibility

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: muse_llada_elbo.yaml  muse_llada_nll.yaml  muse_llama.yaml  tofu_llada15_elbo.yaml  tofu_llada15_nll.yaml  tofu_llada_elbo.yaml  tofu_llada_nll.yaml  tofu_llama.yaml  tofu_llama_eu.yaml  tofu_llama_fisher_meta.yaml  tofu_llama_ga.yaml  tofu_llama_grad_diff.yaml  tofu_llama_kl.yaml  tofu_llama_kl_double.yaml  tofu_llama_npo.yaml  tofu_llama_vdu.yaml
docs/: METHODS.md  STATUS.md
docs/adr/: 001-llada-sft-loss-normalization.md  002-unlearning-method-corrections.md  003-primary-axis-arm-only.md  004-tofu-over-muse-and-wmdp.md  005-gpu-and-process-conventions.md  006-response-mask-includes-padding.md  007-kl-variants-ablation.md  README.md
results/: e2e_test.json
results/baselines/: README.md  tofu_llada_elbo.json  tofu_llada_nll.json  tofu_llama.json
results/finetune_verify/: llada_elbo.json  llada_elbo_generate.json  llada_nll.json  llada_nll_generate.json  llama.json
results/tofu/llama-3.1-8b-instruct/: eu.json  fisher_meta.json  ga.json  grad_diff.json  kl.json  kl_double.json  npo.json  vdu.json
scripts/: baseline.py  run_unlearn_sweep.sh  sanity_check.py  verify_llada_generate.py  verify_tofu_knowledge.py
src/llada_unlearn/: config.py  run.py
src/llada_unlearn/data/: __init__.py  muse.py  tofu.py
src/llada_unlearn/evaluation/: metrics.py  runner.py
src/llada_unlearn/models/: __init__.py  base.py  llada.py  llama.py
src/llada_unlearn/pipeline/: cycle.py  relearn.py  unlearn.py
src/llada_unlearn/unlearning/: __init__.py  base.py  eu.py  fisher_meta.py  ga.py  kl.py  npo.py  vdu.py
src/unlearn_relearn/: __init__.py  config.py  run.py
src/unlearn_relearn/data/: __init__.py  muse.py  tofu.py
src/unlearn_relearn/evaluation/: __init__.py  metrics.py  runner.py
src/unlearn_relearn/models/: __init__.py  base.py  llada.py  llama.py
src/unlearn_relearn/pipeline/: __init__.py  cycle.py  finetune.py  relearn.py  unlearn.py
src/unlearn_relearn/unlearning/: __init__.py  base.py  eu.py  fisher_meta.py  ga.py  grad_diff.py  kl.py  kl_double.py  npo.py  vdu.py
